# monetr

./: .bazelignore  .bazelrc  .deepsource.toml  .development.env  .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .helmignore  .licensed.yaml  .release-please-manifest.json  404.html  BUILD  Brewfile  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CNAME  CODE_OF_CONDUCT.md  Chart.yaml  Dockerfile  Dockerfile.database  Dockerfile.local  Dockerfile.mailhog  Dockerfile.monolith  Dockerfile.work  Dockerfile.x  LICENSE  Makefile  Makefile.backup  Makefile.ci  Makefile.deploy  Makefile.docker  Makefile.dog  Makefile.github-actions  Makefile.gitlab-ci  Makefile.local  (+76 more)
docs/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  contact.md  env.d.ts  intl-temp.js  next-sitemap.config.js  next.config.js  next.config.ts  og-image  package.json  postcss.config.js  postcss.config.ts  rspress.config.ts  tailwind.config.js  tailwind.config.ts  theme.config.tsx  tsconfig.json
docs/api/: API.md
docs/components/: BackgroundGradientAnimation.module.scss  BackgroundGradientAnimation.tsx  Button.module.scss  Button.tsx  Cards.module.scss  Cards.tsx  Carousel.module.scss  Carousel.tsx  Feature.module.scss  Feature.tsx  FundingBar.module.scss  FundingBar.tsx  GithubIssue.tsx  GithubStars.module.scss  GithubStars.tsx  Hero.module.scss  Hero.tsx  LedgerMeta.module.scss  LedgerMeta.tsx  PageMetadata.tsx  Particles.tsx  PricingPage.module.scss  PricingPage.tsx  QueryClientWrapper.tsx  ScreenshotCarousel.module.scss  ScreenshotCarousel.tsx  SignIn.module.scss  SignIn.tsx
docs/developer/: Local.md
docs/developing/: CODE_OF_CONDUCT.md  build.md  credentials.md  documentation.md  index.md  local.md
docs/help/: index.md  onboarding.md
docs/plugins/: rehypeMathPostProcess.ts  searchIndexCleanup.ts  trailingSlashRedirects.ts
docs/public/: robots.txt
docs/styles/: globals.scss  mixins.scss
docs/stylesheets/: extra.css
docs/theme/: Layout.module.scss  index.css  index.tsx
docs/util/: mergeClasses.ts
images/: CMakeLists.txt
interface/: .swcrc  CMakeLists.txt  README.md  bunfig.toml  jest.config.ts  package.json  pluginPWA.ts  pnpm-lock.yaml  postcss.config.cjs  postcss.config.ts  rsbuild.config.ts  rspack.config.js  rstest.config.ts  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vitest.config.ts
interface/public/: index.html  manifest.json
interface/src/: Root.tsx  build.ts  env.d.ts  index.tsx  loading.css  loading.module.scss  loading.stories.tsx  loading.tsx  mixins.scss  monetr.module.css  monetr.scss  monetr.spec.tsx  monetr.tsx  radix.stories.tsx  setupTests.ts  theme.ts  variables.scss
interface/types/: bun.d.ts
pkg/application/: BUILD.bazel  app.go  app_test.go
pkg/background/: BUILD.bazel  cleanup_jobs.go  cleanup_jobs_test.go  deactivate_links.go  gocraft.go  gocraft_test.go  job_dist.go  jobs.go  jobs_test.go  main_test.go  postgres.go  process_funding_schedule.go  process_funding_schedule_test.go  process_spending.go  process_spending_test.go  pull_balances.go  pull_transactions.go  pull_transactions_test.go  remove_link.go  remove_transactions.go  sync_plaid.go  sync_plaid_test.go  synchronous.go
pkg/billing/: BUILD.bazel  billing.go  bootstrap.go  easy.go  manager.go  paywall.go  paywall_test.go  stripe.go
pkg/cache/: BUILD.bazel  authentication.go  authentication_test.go  redis.go  transactions.go  wrapper.go  wrapper_test.go
pkg/captcha/: BUILD.bazel  captcha.go  captcha_test.go
pkg/certhelper/: BUILD.bazel  helper_test.go
pkg/client/: BUILD.bazel  client.go  http.go
pkg/cmd/: BUILD.bazel  admin.go  beta.go  cleanup_jobs.go  config.go  controllers.go  data.go  database.go  develop.go  jobs.go  kms.go  main.go  migrate.go  notices.go  repair.go  root.go  serve.go  version.go
pkg/communication/: BUILD.bazel  CMakeLists.txt  comm.go  comms.go  comms_test.go  email.go  smtp.go  smtp_auth.go  smtp_auth_local.go  smtp_auth_local_test.go  smtp_auth_mini.go  smtp_mini_test.go
pkg/config/: BUILD.bazel  billing.go  configuration.go  configuration_test.go  database.go  database.strings.go
pkg/consts/: BUILD.bazel  bcrypt.go  plaid.go
pkg/controller/: BUILD.bazel  account.go  account_test.go  api_path.go  api_path_ui.go  authentication.go  authentication_test.go  bank_accounts.go  banks.go  billing.go  billing_test.go  config.go  config_test.go  controller.go  controller_test.go  error.go  errors.go  expenses.go  forecast.go  funding_schedules.go  funding_schedules_test.go  helpers.go  icons.go  icons_simple_icons_test.go  institutions.go  jobs.go  links.go  links_test.go  login.go  login_test.go  main_test.go  me.go  middleware.go  plaid.go  plaid_test.go  plaid_webhook.go  plaid_webhook_test.go  register.go  register_test.go  routes.go  (+9 more)
pkg/crumbs/: BUILD.bazel  crumbs.go  tracing.go  user.go
pkg/email_templates/: BUILD.bazel  templates.go  templates_test.go
pkg/forecast/: BUILD.bazel  forecast.go  forecast_test.go  funding.go  funding_test.go  main_test.go  spending.go  spending_test.go
pkg/hash/: BUILD.bazel  hash.go  hash_test.go
pkg/icons/: BUILD.bazel  icons.go  index.go  simple_icons.go  status.go  util.go
pkg/logging/: BUILD.bazel  context_formatter.go  logger.go  logrus.go  pg.go  stackdriver.go  stackdriver_test.go
pkg/mail/: BUILD.bazel  smtp.go  smtp_auth.go  smtp_auth_mini.go  smtp_mini_test.go
pkg/metrics/: BUILD.bazel  metrics.go
pkg/migrations/: BUILD.bazel  migrations.go  schema.go
pkg/models/: BUILD.bazel  Spending.md  account.go  all.go  bank_account.go  beta.go  checkout_session.go  email_verification.go  expense.go  features.go  funding_schedule.go  funding_schedule_test.go  institution.go  invoice.go  link.go  link.strings.go  link_type.go  link_type.strings.go  login.go  payment_method.go  phone_verification.go  plaid_link.go  plaid_link_vault.go  plaid_tokens.go  prices.go  product.go  product_price.go  registration.go  rule.go  rule_test.go  spending.go  spending_funding.go  spending_test.go  subscription.go  subscription_item.go  (+2 more)
server/: CMakeLists.txt
(+6161 files in other folders)
